# nuvolos-cli

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml
docs/: app_management.md  commands.md  distribution_management.md  execute_commands.md  files_management.md  image_families_management.md  image_links_management.md  image_management.md  index.md  install.md  instance_management.md  launch_scaled_apps.md  list_running_applications.md  quickstart.md  requirements.txt  session_management.md  snapshot_management.md  space_management.md  tables_management.md
nuvolos_cli/: __init__.py  __main__.py  api_client.py  cli.py  config.py  context.py  error.py  exception.py  interface.py  utils.py  version.py
tests/: common.py  conftest.py  test_info.py  test_init.py  test_interface.py
